<resources>
    <string name="app_name">Study App</string>
    <string name="movie_name">Avengers:\nEnd game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="story_name">Storyline</string>
    <string name="story_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="counter_reviews">125 REVIEWS</string>
    <string name="cast">Cast</string>
    <string name="name_actor_1">Robert Downey Jr.</string>
    <string name="name_actor_2">Chris Evans</string>
    <string name="name_actor_3">Mark Ruffalo</string>
    <string name="name_actor_4">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="age_rate">13+</string>
    <string name="duration">137 MIN</string>
    <string name="title_name_card">Avengers: End game</string>
    <string name="movies_list">Movies List</string>
    <string name="minimum_age">%1$d+</string>
    <string name="number_of_ratings">%1$d REVIEWS</string>
    <string name="runtime">%1$d MIN</string>
</resources>