<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_main"
        android:layout_width="0dp"
        android:layout_height="298dp"
        android:scaleType="centerCrop"
        android:src="@drawable/orig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="298dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:alpha="0.5"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"
        app:drawableStartCompat="@drawable/ic_arrow"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_age_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_rectangle"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:text="@string/age_rate"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_name"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line" />

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="@font/roboto_black"
        android:gravity="start"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_main" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/roboto_light"
        android:text="@string/genre"
        android:textColor="@color/pink"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_name" />

    <ImageView
        android:id="@+id/iv_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_star_icon_pink_12"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <ImageView
        android:id="@+id/iv_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_star_icon_pink_12"
        app:layout_constraintStart_toEndOf="@+id/iv_star_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <ImageView
        android:id="@+id/iv_star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_star_icon_pink_12"
        app:layout_constraintStart_toEndOf="@+id/iv_star_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <ImageView
        android:id="@+id/iv_star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_star_icon_pink_12"
        app:layout_constraintStart_toEndOf="@+id/iv_star_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <ImageView
        android:id="@+id/iv_star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_star_icon_gray_12"
        app:layout_constraintStart_toEndOf="@+id/iv_star_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_counter_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/counter_reviews"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star_5"
        app:layout_constraintStart_toEndOf="@+id/iv_star_5"
        app:layout_constraintTop_toTopOf="@+id/iv_star_5" />

    <TextView
        android:id="@+id/tv_story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/story_name"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_counter_reviews" />

    <TextView
        android:id="@+id/tv_story_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:alpha="0.75"
        android:fontFamily="@font/roboto_light"
        android:lineSpacingExtra="6sp"
        android:lines="4"
        android:maxLines="4"
        android:text="@string/story_description"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_name" />

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_description" />

    <ImageView
        android:id="@+id/iv_photo_actor_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:src="@drawable/robert_downey"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/iv_photo_actor_2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/gl_start_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_photo_actor_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:src="@drawable/chris_evans"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/iv_photo_actor_3"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_actor_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_photo_actor_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:src="@drawable/mark_ruffalo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/iv_photo_actor_4"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_actor_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_photo_actor_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:src="@drawable/chris_hemsworth"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_actor_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_actor_1"
        style="@style/NameActor"
        android:text="@string/name_actor_1"
        app:layout_constraintEnd_toEndOf="@+id/iv_photo_actor_1"
        app:layout_constraintStart_toStartOf="@+id/iv_photo_actor_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_actor_1" />

    <TextView
        android:id="@+id/tv_name_actor_2"
        style="@style/NameActor"
        android:text="@string/name_actor_2"
        app:layout_constraintEnd_toEndOf="@+id/iv_photo_actor_2"
        app:layout_constraintStart_toStartOf="@+id/iv_photo_actor_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_actor_2" />

    <TextView
        android:id="@+id/tv_name_actor_3"
        style="@style/NameActor"
        android:text="@string/name_actor_3"
        app:layout_constraintEnd_toEndOf="@+id/iv_photo_actor_3"
        app:layout_constraintStart_toStartOf="@+id/iv_photo_actor_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_actor_3" />

    <TextView
        android:id="@+id/tv_name_actor_4"
        style="@style/NameActor"
        android:text="@string/name_actor_4"
        app:layout_constraintEnd_toEndOf="@+id/iv_photo_actor_4"
        app:layout_constraintStart_toStartOf="@+id/iv_photo_actor_4"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_actor_4" />
</androidx.constraintlayout.widget.ConstraintLayout>

