<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_main"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="fitXY"
            android:src="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="56dp"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_light"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="226dp"
            android:background="@drawable/ic_rectangle"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/age_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:fontFamily="@font/roboto_black"
            android:gravity="start"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/roboto_light"
            android:text="@string/genre"
            android:textColor="@color/pink"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/title_name" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_1"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_2"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_3"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintStart_toEndOf="@+id/star_4"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/counter_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/counter_reviews"
            android:textColor="@color/gray"
            android:textSize="@dimen/normal_text"
            app:layout_constraintBottom_toBottomOf="@+id/star_5"
            app:layout_constraintStart_toEndOf="@+id/star_5"
            app:layout_constraintTop_toTopOf="@+id/star_5" />

        <TextView
            android:id="@+id/story_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/story_name"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/counter_reviews" />

        <TextView
            android:id="@+id/story_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:alpha="0.75"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingExtra="6sp"
            android:lines="4"
            android:maxLines="4"
            android:text="@string/story_description"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/story_name" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/story_description" />

        <ImageView
            android:id="@+id/photo_actor_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/robert_downey"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/photo_actor_2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/photo_actor_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/chris_evans"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/photo_actor_3"
            app:layout_constraintStart_toEndOf="@+id/photo_actor_1"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/photo_actor_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/photo_actor_4"
            app:layout_constraintStart_toEndOf="@+id/photo_actor_2"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/photo_actor_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photo_actor_3"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_actor_1"
            style="@style/NameActor"
            android:text="@string/name_actor_1"
            app:layout_constraintEnd_toEndOf="@+id/photo_actor_1"
            app:layout_constraintStart_toStartOf="@+id/photo_actor_1"
            app:layout_constraintTop_toBottomOf="@+id/photo_actor_1" />

        <TextView
            android:id="@+id/name_actor_2"
            style="@style/NameActor"
            android:text="@string/name_actor_2"
            app:layout_constraintEnd_toEndOf="@+id/photo_actor_2"
            app:layout_constraintStart_toStartOf="@+id/photo_actor_2"
            app:layout_constraintTop_toBottomOf="@+id/photo_actor_2" />

        <TextView
            android:id="@+id/name_actor_3"
            style="@style/NameActor"
            android:text="@string/name_actor_3"
            app:layout_constraintEnd_toEndOf="@+id/photo_actor_3"
            app:layout_constraintStart_toStartOf="@+id/photo_actor_3"
            app:layout_constraintTop_toBottomOf="@+id/photo_actor_3" />

        <TextView
            android:id="@+id/name_actor_4"
            style="@style/NameActor"
            android:text="@string/name_actor_4"
            app:layout_constraintEnd_toEndOf="@+id/photo_actor_4"
            app:layout_constraintStart_toStartOf="@+id/photo_actor_4"
            app:layout_constraintTop_toBottomOf="@+id/photo_actor_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>